# aoc-2022

./: .gitattributes  Cargo.toml  LICENSE  README.md
githooks/: pre-commit  pre-commit.nolints  pre-commit.pedantic
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14-2.rs  day14.rs
