[package]
name = "aoc-2022"
version = "0.1.0"
authors = ["ThiFerne <thimo.f.neumann@gmail.com>"]
edition = "2021"
description = "My solutions to the Advent Of Code 2022 in Rust."
readme = "README.md"
repository = "https://github.com/ThiFerNe/aoc-2022"
license-file = "LICENSE"
publish = false

[[bin]]
path = "src/day01.rs"
name = "day01"

[dependencies]
anyhow = "1.0.66"
