[package]
name = "aoc-2022"
version = "0.1.0"
authors = ["ThiFerne <thimo.f.neumann@gmail.com>"]
edition = "2021"
description = "My solutions to the Advent Of Code 2022 in Rust."
readme = "README.md"
repository = "https://github.com/ThiFerNe/aoc-2022"
license-file = "LICENSE"
publish = false

[[bin]]
path = "src/day01.rs"
name = "day01"

[[bin]]
path = "src/day02.rs"
name = "day02"

[[bin]]
path = "src/day03.rs"
name = "day03"

[dependencies]
anyhow = "1.0.66"
itertools = "0.10.5"
