[package]
name = "aoc-2022"
version = "0.1.0"
authors = ["ThiFerne <thimo.f.neumann@gmail.com>"]
edition = "2021"
description = "My solutions to the Advent Of Code 2022 in Rust."
readme = "README.md"
repository = "https://github.com/ThiFerNe/aoc-2022"
license-file = "LICENSE"
publish = false

[[bin]]
path = "src/day01.rs"
name = "day01"

[[bin]]
path = "src/day02.rs"
name = "day02"

[[bin]]
path = "src/day03.rs"
name = "day03"

[[bin]]
path = "src/day04.rs"
name = "day04"

[[bin]]
path = "src/day05.rs"
name = "day05"

[[bin]]
path = "src/day06.rs"
name = "day06"

[[bin]]
path = "src/day07.rs"
name = "day07"

[dependencies]
anyhow = "1.0.66"
itertools = "0.10.5"
regex = "1.7.0"
